--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "jotai": "^1.4.7",
+    "netlify-identity-widget": "^1.9.2",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
