--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "framer-motion": "^6.3.11",
+    "install": "^0.13.0",
     "jotai": "^1.4.7",
     "netlify-identity-widget": "^1.9.2",
     "next": "12.0.7",
+    "npm": "^8.13.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "shopify-buy": "^2.13.0"
